# Chest-Cancer-Classification

./: .gitignore  README.md  app.py  dvc.yaml  main.py  project_structure_template.py  pyproject.toml  requirements.txt  scores.json
config/: config.yaml
mlruns/0/: meta.yaml
mlruns/0/387d5826a7b54bc6b9cd9246f0fc4a67/: meta.yaml
mlruns/0/387d5826a7b54bc6b9cd9246f0fc4a67/artifacts/model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
mlruns/0/387d5826a7b54bc6b9cd9246f0fc4a67/metrics/: accuracy  loss
mlruns/0/387d5826a7b54bc6b9cd9246f0fc4a67/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
mlruns/0/3bd215dcb50a4e21975585e68d875f21/: meta.yaml
mlruns/0/3bd215dcb50a4e21975585e68d875f21/artifacts/model/: MLmodel  conda.yaml
mlruns/0/3bd215dcb50a4e21975585e68d875f21/metrics/: accuracy  loss
mlruns/0/3bd215dcb50a4e21975585e68d875f21/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
research/: 01_data_ingestion.ipynb  02_prepare_base_model.ipynb  03_model_trainer.ipynb  04_model_evaluation.ipynb
src/chestCancerClassification/: __init__.py
src/chestCancerClassification/components/: data_ingestion.py  model_evaluation.py  model_trainer.py  prepare_base_model.py
src/chestCancerClassification/config/: configuration.py
src/chestCancerClassification/entity/: config_entity.py
src/chestCancerClassification/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_trainer.py  stage_04_model_evaluation.py
src/chestCancerClassification/utils/: common.py
(+2 files in other folders)
